objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Rush</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Marketing</relationshipLabel>
        <relationshipName>Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_1_Bid__c</fullName>
        <label>Quote #1 Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_1_Vendor__c</fullName>
        <label>Quote #1 Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_2_Bid__c</fullName>
        <label>Quote #2 Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_2_Vendor__c</fullName>
        <label>Quote #2 Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Cost__c</fullName>
        <label>Registration Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Deadline__c</fullName>
        <label>Registration Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reserved_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reserved_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Airline_Flight_Number__c</fullName>
        <label>Return Airline &amp; Flight Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Airport_Name__c</fullName>
        <label>Return Airport Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Arrival_Time__c</fullName>
        <inlineHelpText>Flight Arrival Time when returning from event.</inlineHelpText>
        <label>Return Arrival Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Depart_Time__c</fullName>
        <inlineHelpText>Flight Departure Time when returning from event.</inlineHelpText>
        <label>Return Depart Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_From_Event_Date__c</fullName>
        <label>Return From Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Support_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Support #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Support_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Support #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Support_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Support #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Direct_Shipment_Pickup_Date__c</fullName>
        <label>Direct Shipment Pickup Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Pickup_Date__c</fullName>
        <label>Scheduled Pickup Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Setup_Date__c</fullName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_Time__c</fullName>
        <label>Setup Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Vendor_Name__c</fullName>
        <label>Shipping Vendor Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Delivery_City__c</fullName>
        <label>Show Delivery City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Delivery_State__c</fullName>
        <label>Show Delivery State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Delivery_Street__c</fullName>
        <label>Show Delivery Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Delivery_Zip_Code__c</fullName>
        <label>Show Delivery Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Direct_Shipment_Deadline__c</fullName>
        <label>Show Direct Shipment Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_Direct_Shipping_Name__c</fullName>
        <label>Show Direct Shipping Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_End_Date__c</fullName>
        <label>Show End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_End_Time__c</fullName>
        <label>Show End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Show_Schedule__c</fullName>
        <label>Show Schedule</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Start_Date__c</fullName>
        <label>Show Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_Start_Time__c</fullName>
        <label>Show Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Show_Vendor_Name__c</fullName>
        <label>Show Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Level__c</fullName>
        <label>Sponsor Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Cost__c</fullName>
        <label>Sponsorship Cost</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Details__c</fullName>
        <label>Sponsorship Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Expense_Notes__c</fullName>
        <label>Sponsorship Expense Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Paid__c</fullName>
        <label>Sponsorship Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Accepting_Shipments_Date__c</fullName>
        <label>Start Accepting Shipments Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Number__c</fullName>
        <label>Tax Exempt Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAUjn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAUkR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Budget__c</fullName>
        <label>Total Approved Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Amusements__c</fullName>
        <label>Total Number of Amusements</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Machines__c</fullName>
        <label>Total Number of Machines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Details__c</fullName>
        <label>Transportation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation_Notes__c</fullName>
        <label>Transportation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Final__c</fullName>
        <label>Vendor (Final)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Vendor Name)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Notes__c</fullName>
        <label>Vendor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Date__c</fullName>
        <label>Vendor Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <label>Venue State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Street_Name__c</fullName>
        <label>Venue Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Zip_Code__c</fullName>
        <label>Venue Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Gathered_Dated__c</fullName>
        <label>Warehouse Gathered Dated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yeti_Giveaway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yeti Giveaway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_edits__c</fullName>
        <label># of edits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <recordTypes>
        <fullName>Trade_Shows</fullName>
        <active>true</active>
        <label>Trade Shows</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Booth_Number_Must_Be_Numeric</fullName>
        <active>false</active>
        <description>To avoid commas in the Booth Number field, the field was created as text fields. this val rule enforces numerical entries for the field.</description>
        <errorConditionFormula>and(
not( ISBLANK( Booth_Number__c )),
not(ISNUMBER( Booth_Number__c))
)</errorConditionFormula>
        <errorDisplayField>Booth_Number__c</errorDisplayField>
        <errorMessage>Booth Number must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hotel_State_Fields</fullName>
        <active>true</active>
        <description>State must be the correct abbreviation - a validation rule was writen for Delivery State, Hotel State and Venue State fields</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Hotel_State__c)),
Hotel_State__c &lt;&gt;&quot;AL&quot;,
Hotel_State__c &lt;&gt;&quot;AK&quot;,
Hotel_State__c &lt;&gt;&quot;AZ&quot;,
Hotel_State__c &lt;&gt;&quot;AR&quot;,
Hotel_State__c &lt;&gt;&quot;CA&quot;,
Hotel_State__c &lt;&gt;&quot;CO&quot;,
Hotel_State__c &lt;&gt;&quot;CT&quot;,
Hotel_State__c &lt;&gt;&quot;DE&quot;,
Hotel_State__c &lt;&gt;&quot;FL&quot;,
Hotel_State__c &lt;&gt;&quot;GA&quot;,
Hotel_State__c &lt;&gt;&quot;IL&quot;,
Hotel_State__c &lt;&gt;&quot;HI&quot;,
Hotel_State__c &lt;&gt;&quot;ID&quot;,
Hotel_State__c &lt;&gt;&quot;IN&quot;,
Hotel_State__c &lt;&gt;&quot;IA&quot;,
Hotel_State__c &lt;&gt;&quot;KS&quot;,
Hotel_State__c &lt;&gt;&quot;KY&quot;,
Hotel_State__c &lt;&gt;&quot;LA&quot;,
Hotel_State__c &lt;&gt;&quot;ME&quot;,
Hotel_State__c &lt;&gt;&quot;MD&quot;,
Hotel_State__c &lt;&gt;&quot;MA&quot;,
Hotel_State__c &lt;&gt;&quot;MI&quot;,
Hotel_State__c &lt;&gt;&quot;MN&quot;,
Hotel_State__c &lt;&gt;&quot;MS&quot;,
Hotel_State__c &lt;&gt;&quot;MO&quot;,
Hotel_State__c &lt;&gt;&quot;MT&quot;,
Hotel_State__c &lt;&gt;&quot;NE&quot;,
Hotel_State__c &lt;&gt;&quot;NV&quot;,
Hotel_State__c &lt;&gt;&quot;NH&quot;,
Hotel_State__c &lt;&gt;&quot;NJ&quot;,
Hotel_State__c &lt;&gt;&quot;NM&quot;,
Hotel_State__c &lt;&gt;&quot;NY&quot;,
Hotel_State__c &lt;&gt;&quot;NC&quot;,
Hotel_State__c &lt;&gt;&quot;ND&quot;,
Hotel_State__c &lt;&gt;&quot;OH&quot;,
Hotel_State__c &lt;&gt;&quot;OK&quot;,
Hotel_State__c &lt;&gt;&quot;OR&quot;,
Hotel_State__c &lt;&gt;&quot;PA&quot;,
Hotel_State__c &lt;&gt;&quot;RI&quot;,
Hotel_State__c &lt;&gt;&quot;SC&quot;,
Hotel_State__c &lt;&gt;&quot;SD&quot;,
Hotel_State__c &lt;&gt;&quot;TN&quot;,
Hotel_State__c &lt;&gt;&quot;TX&quot;,
Hotel_State__c &lt;&gt;&quot;UT&quot;,
Hotel_State__c &lt;&gt;&quot;VT&quot;,
Hotel_State__c &lt;&gt;&quot;VA&quot;,
Hotel_State__c &lt;&gt;&quot;WA&quot;,
Hotel_State__c &lt;&gt;&quot;WV&quot;,
Hotel_State__c &lt;&gt;&quot;WI&quot;,
Hotel_State__c &lt;&gt;&quot;WY&quot;)</errorConditionFormula>
        <errorDisplayField>of_edits__c</errorDisplayField>
        <errorMessage>Enter correct abbreviation for Hotel state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Venue_and_Delivery_State_Fields</fullName>
        <active>true</active>
        <description>State must be the correct abbreviation - a validation rule was writen for Delivery State, Hotel State and Venue State fields</description>
        <errorConditionFormula>OR(AND(
NOT(ISBLANK(Venue_State__c)),
Venue_State__c &lt;&gt;&quot;AL&quot;,
Venue_State__c &lt;&gt;&quot;AK&quot;,
Venue_State__c &lt;&gt;&quot;AZ&quot;,
Venue_State__c &lt;&gt;&quot;AR&quot;,
Venue_State__c &lt;&gt;&quot;CA&quot;,
Venue_State__c &lt;&gt;&quot;CO&quot;,
Venue_State__c &lt;&gt;&quot;CT&quot;,
Venue_State__c &lt;&gt;&quot;DE&quot;,
Venue_State__c &lt;&gt;&quot;FL&quot;,
Venue_State__c &lt;&gt;&quot;GA&quot;,
Venue_State__c &lt;&gt;&quot;IL&quot;,
Venue_State__c &lt;&gt;&quot;HI&quot;,
Venue_State__c &lt;&gt;&quot;ID&quot;,
Venue_State__c &lt;&gt;&quot;IN&quot;,
Venue_State__c &lt;&gt;&quot;IA&quot;,
Venue_State__c &lt;&gt;&quot;KS&quot;,
Venue_State__c &lt;&gt;&quot;KY&quot;,
Venue_State__c &lt;&gt;&quot;LA&quot;,
Venue_State__c &lt;&gt;&quot;ME&quot;,
Venue_State__c &lt;&gt;&quot;MD&quot;,
Venue_State__c &lt;&gt;&quot;MA&quot;,
Venue_State__c &lt;&gt;&quot;MI&quot;,
Venue_State__c &lt;&gt;&quot;MN&quot;,
Venue_State__c &lt;&gt;&quot;MS&quot;,
Venue_State__c &lt;&gt;&quot;MO&quot;,
Venue_State__c &lt;&gt;&quot;MT&quot;,
Venue_State__c &lt;&gt;&quot;NE&quot;,
Venue_State__c &lt;&gt;&quot;NV&quot;,
Venue_State__c &lt;&gt;&quot;NH&quot;,
Venue_State__c &lt;&gt;&quot;NJ&quot;,
Venue_State__c &lt;&gt;&quot;NM&quot;,
Venue_State__c &lt;&gt;&quot;NY&quot;,
Venue_State__c &lt;&gt;&quot;NC&quot;,
Venue_State__c &lt;&gt;&quot;ND&quot;,
Venue_State__c &lt;&gt;&quot;OH&quot;,
Venue_State__c &lt;&gt;&quot;OK&quot;,
Venue_State__c &lt;&gt;&quot;OR&quot;,
Venue_State__c &lt;&gt;&quot;PA&quot;,
Venue_State__c &lt;&gt;&quot;RI&quot;,
Venue_State__c &lt;&gt;&quot;SC&quot;,
Venue_State__c &lt;&gt;&quot;SD&quot;,
Venue_State__c &lt;&gt;&quot;TN&quot;,
Venue_State__c &lt;&gt;&quot;TX&quot;,
Venue_State__c &lt;&gt;&quot;UT&quot;,
Venue_State__c &lt;&gt;&quot;VT&quot;,
Venue_State__c &lt;&gt;&quot;VA&quot;,
Venue_State__c &lt;&gt;&quot;WA&quot;,
Venue_State__c &lt;&gt;&quot;WV&quot;,
Venue_State__c &lt;&gt;&quot;WI&quot;,
Venue_State__c &lt;&gt;&quot;WY&quot;),
AND(
NOT(ISBLANK(Delivery_State__c)),
Delivery_State__c &lt;&gt;&quot;AL&quot;,
Delivery_State__c &lt;&gt;&quot;AK&quot;,
Delivery_State__c &lt;&gt;&quot;AZ&quot;,
Delivery_State__c &lt;&gt;&quot;AR&quot;,
Delivery_State__c &lt;&gt;&quot;CA&quot;,
Delivery_State__c &lt;&gt;&quot;CO&quot;,
Delivery_State__c &lt;&gt;&quot;CT&quot;,
Delivery_State__c &lt;&gt;&quot;DE&quot;,
Delivery_State__c &lt;&gt;&quot;FL&quot;,
Delivery_State__c &lt;&gt;&quot;GA&quot;,
Delivery_State__c &lt;&gt;&quot;IL&quot;,
Delivery_State__c &lt;&gt;&quot;HI&quot;,
Delivery_State__c &lt;&gt;&quot;ID&quot;,
Delivery_State__c &lt;&gt;&quot;IN&quot;,
Delivery_State__c &lt;&gt;&quot;IA&quot;,
Delivery_State__c &lt;&gt;&quot;KS&quot;,
Delivery_State__c &lt;&gt;&quot;KY&quot;,
Delivery_State__c &lt;&gt;&quot;LA&quot;,
Delivery_State__c &lt;&gt;&quot;ME&quot;,
Delivery_State__c &lt;&gt;&quot;MD&quot;,
Delivery_State__c &lt;&gt;&quot;MA&quot;,
Delivery_State__c &lt;&gt;&quot;MI&quot;,
Delivery_State__c &lt;&gt;&quot;MN&quot;,
Delivery_State__c &lt;&gt;&quot;MS&quot;,
Delivery_State__c &lt;&gt;&quot;MO&quot;,
Delivery_State__c &lt;&gt;&quot;MT&quot;,
Delivery_State__c &lt;&gt;&quot;NE&quot;,
Delivery_State__c &lt;&gt;&quot;NV&quot;,
Delivery_State__c &lt;&gt;&quot;NH&quot;,
Delivery_State__c &lt;&gt;&quot;NJ&quot;,
Delivery_State__c &lt;&gt;&quot;NM&quot;,
Delivery_State__c &lt;&gt;&quot;NY&quot;,
Delivery_State__c &lt;&gt;&quot;NC&quot;,
Delivery_State__c &lt;&gt;&quot;ND&quot;,
Delivery_State__c &lt;&gt;&quot;OH&quot;,
Delivery_State__c &lt;&gt;&quot;OK&quot;,
Delivery_State__c &lt;&gt;&quot;OR&quot;,
Delivery_State__c &lt;&gt;&quot;PA&quot;,
Delivery_State__c &lt;&gt;&quot;RI&quot;,
Delivery_State__c &lt;&gt;&quot;SC&quot;,
Delivery_State__c &lt;&gt;&quot;SD&quot;,
Delivery_State__c &lt;&gt;&quot;TN&quot;,
Delivery_State__c &lt;&gt;&quot;TX&quot;,
Delivery_State__c &lt;&gt;&quot;UT&quot;,
Delivery_State__c &lt;&gt;&quot;VT&quot;,
Delivery_State__c &lt;&gt;&quot;VA&quot;,
Delivery_State__c &lt;&gt;&quot;WA&quot;,
Delivery_State__c &lt;&gt;&quot;WV&quot;,
Delivery_State__c &lt;&gt;&quot;WI&quot;,
Delivery_State__c &lt;&gt;&quot;WY&quot;))</errorConditionFormula>
        <errorMessage>Enter correct abbreviation for state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Codes_Must_Be_Numbers</fullName>
        <active>true</active>
        <description>To avoid commas in the zip code fields, the fields were created as text fields. this val rule enforces numerical entries for those fields</description>
        <errorConditionFormula>or(
and(not( ISBLANK( Delivery_Zip_Code__c )),not(ISNUMBER( Delivery_Zip_Code__c ))),
and(not( ISBLANK( Hotel_Zip_Code__c )),not(ISNUMBER( Hotel_Zip_Code__c ))),
and(not( ISBLANK( Venue_Zip_Code__c )),not(ISNUMBER( Venue_Zip_Code__c )))
)</errorConditionFormula>
        <errorMessage>Please enter a 5-digit number for the zip code.</errorMessage>
    </validationRules>
</CustomObject>